<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Get_Card_Details">


    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_close"
            android:text="Cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_check"
            android:text="Done" />

        <ImageView
            android:id="@+id/scanCardImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCancel"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:src="@drawable/ic__credit_card" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextCardNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/card_number"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Enter the customer number printed on your card"
        android:textColor="@color/light_grey"
        android:layout_below="@+id/outlinedTextCardNo"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/description"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outlinedTextDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvFullKeyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_full_keyboard"
            android:textColor="@color/white"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/tvNumericKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_numeric_keyboard"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tvScanBarCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/scan_barcode"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</RelativeLayout>